Fixed issue that could result in invalid BOMs bring produced if they contain URLs that are invalid.